# wei-ui

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/: lib.rs  main.rs  main.rs.bak
