[package]
name = "wei-ui"
version = "0.1.1"
edition = "2021"
description = "wei ui"
documentation = "https://github.com/zuiyue-com/wei-ui"
homepage = "https://github.com/zuiyue-com/wei-ui"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.10"
single-instance = "0.3"
wry = "0.32.0"
image = "0.24.7"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3", features = ["winbase","tlhelp32","handleapi","wincon","winuser","psapi"] }
wei-log = "0.2.5"