[package]
name = "wei-ui"
version = "0.2.1"
edition = "2021"
description = "wei ui"
documentation = "https://github.com/zuiyue-com/wei-ui"
homepage = "https://github.com/zuiyue-com/wei-ui"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.13"
wei-run = "0.2.4"
wei-log = "0.2.8"
single-instance = "0.3"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tauri = { version = "1.5.2", features = ["system-tray", "icon-ico", "icon-png"] }