[package]
name = "wei-ui"
version = "0.2.1"
edition = "2021"
description = "wei ui"
documentation = "https://github.com/zuiyue-com/wei-ui"
homepage = "https://github.com/zuiyue-com/wei-ui"
license = "MIT OR Apache-2.0"

[profile.dev]
incremental = true
opt-level = 0

[dependencies]
wei-env = "0.2.13"
wei-run = "0.3"
wei-log = "0.2.10"
wei-single = "0.3"
wei-windows = { path = "../wei-windows" }

reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tauri = { version = "1.5.2", features = ["system-tray", "icon-ico", "icon-png", "windows7-compat"] }
winrt-notification = "0.5.1"
webbrowser = "0.8.12"
ureq = "2.9"